--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
                 category: document.getElementById('category').value
             };
 
-            const response = await fetch('http://localhost:5000/api/add-product', {
+            const response = await fetch('https://decotech-api.onrender.com', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(product)
@@ -61,4 +61,5 @@
         }
     </script>
 </body>
+
 </html>
