--- a/checkout.html
+++ b/checkout.html
@@ -66,7 +66,7 @@
 
             try {
                 // ১. ডাটাবেসে সেভ করা
-                const response = await fetch('http://localhost:5000/api/orders', {
+                const response = await fetch('https://decotech-api.onrender.com', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(orderData)
@@ -111,4 +111,5 @@
         }
     </script>
 </body>
+
 </html>
