--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div style="display: flex; gap: 20px; align-items: center;">
-        <a href="login.html" style="color: #004d40; font-size: 20px;"><i class="fa fa-user"></i></a>
+        <a href="admin-login.html" style="color: rgba(255,255,255,0.3); text-decoration: none; font-size: 12px;">Admin Login</a> <br>
         <div style="position: relative; cursor: pointer;">
             <a href="cart.html" style="color: #004d40; font-size: 20px; text-decoration: none;">
                 <i class="fa fa-shopping-cart"></i>
@@ -177,3 +177,4 @@
 </body>
 
 </html>
+
