--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
 
     // 1. Fetch Products from Render
     async function fetchProducts() {
+        // index.html er script section-e thik korun
+list.innerHTML = products.slice(0, 8).map(p => `
+    <div class="card">
+        <a href="product-details.html?id=${p._id}" style="text-decoration:none; color:inherit;">
+            <img src="${p.image}" onerror="this.src='https://placehold.co/400x300?text=No+Image'">
+            <h3>${p.name}</h3>
+        </a>
+        <p>৳ ${p.price}</p>
+        <button class="buy-btn" onclick="addToCart('${p.name}', ${p.price})">Add to Cart</button>
+    </div>
+`).join('');
         try {
             const res = await fetch(apiURL);
             const products = await res.json();
@@ -146,3 +157,4 @@
 </script>
 </body>
 </html>
+
