--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
     // Initial load
     fetchProducts();
     updateCartCount();
+    // হোম পেজে সব প্রোডাক্ট দেখানোর জন্য
+async function displayAllProducts() {
+    const res = await fetch('https://decotech-api.onrender.com/api/products');
+    const products = await res.json();
+    
+    const container = document.getElementById('productContainer');
+    container.innerHTML = products.map(p => `
+        <div class="product-card">
+            <img src="${p.image}">
+            <h3>${p.name}</h3>
+            <p>৳${p.price}</p>
+        </div>
+    `).join('');
+}
 </script>
 </body>
 </html>
+
