--- a/about.html
+++ b/about.html
@@ -2,51 +2,173 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | DecoTech</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <style>
+        :root { --primary: #004d40; --accent: #ff9800; --text: #333; --bg: #f9fbfb; }
+        body { font-family: 'Poppins', sans-serif; margin: 0; background: var(--bg); color: var(--text); overflow-x: hidden; }
+
+        /* --- Navbar --- */
+        nav { background: #ffffff; padding: 12px 5%; display: flex; align-items: center; justify-content: space-between; box-shadow: 0 2px 15px rgba(0,0,0,0.08); position: sticky; top: 0; z-index: 1000; }
+        .logo { text-decoration: none; font-size: 26px; font-weight: 700; color: var(--primary); }
+        .logo span { color: var(--accent); }
+        .nav-links a { text-decoration: none; color: #444; font-weight: 500; margin: 0 12px; font-size: 15px; transition: 0.3s; }
+        .nav-links a:hover { color: var(--accent); }
+
+        /* --- Hero Section --- */
+        .about-hero { 
+            height: 400px; 
+            background: linear-gradient(rgba(0,77,64,0.85), rgba(0,77,64,0.85)), url('https://images.unsplash.com/photo-1497366216548-37526070297c?w=1200'); 
+            background-size: cover; background-position: center; 
+            display: flex; align-items: center; justify-content: center; color: white; text-align: center;
+        }
+        .about-hero h1 { font-size: 50px; margin: 0; letter-spacing: 2px; text-transform: uppercase; }
+
+        /* --- Story Section --- */
+        .container { max-width: 1100px; margin: -50px auto 80px; padding: 0 20px; position: relative; z-index: 2; }
+        .story-card { background: white; padding: 50px; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.05); display: flex; align-items: center; gap: 40px; }
+        .story-text { flex: 1; text-align: left; }
+        .story-text h2 { color: var(--primary); font-size: 32px; margin-bottom: 20px; }
+        .story-text p { font-size: 16px; line-height: 1.8; color: #555; }
+        .story-img { flex: 1; border-radius: 15px; overflow: hidden; box-shadow: 0 15px 30px rgba(0,0,0,0.1); }
+        .story-img img { width: 100%; transition: 0.5s; }
+        .story-img:hover img { transform: scale(1.1); }
+
+        /* --- Stats Section --- */
+        .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin-top: 60px; text-align: center; }
+        .stat-item { background: white; padding: 30px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.03); border-bottom: 4px solid var(--accent); }
+        .stat-item i { font-size: 40px; color: var(--primary); margin-bottom: 15px; }
+        .stat-item h3 { font-size: 28px; margin: 5px 0; color: #222; }
+        .stat-item p { color: #888; margin: 0; font-weight: 500; }
+
+        /* --- Vision & Values --- */
+        .values-section { background: var(--primary); color: white; padding: 80px 5%; text-align: center; }
+        .values-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; margin-top: 40px; }
+        .value-card { padding: 30px; border: 1px solid rgba(255,255,255,0.1); border-radius: 15px; transition: 0.3s; }
+        .value-card:hover { background: rgba(255,255,255,0.05); transform: translateY(-10px); }
+        .value-card i { font-size: 35px; color: var(--accent); margin-bottom: 20px; }
+
+        /* --- Footer --- */
+        footer { background: #00332a; color: white; padding: 40px 0; text-align: center; font-size: 14px; }
+
+        @media (max-width: 768px) {
+            .story-card { flex-direction: column; padding: 30px; }
+            .about-hero h1 { font-size: 35px; }
+        }
+    </style>
 </head>
-<nav style="background: #ffffff; padding: 10px 5%; display: flex; align-items: center; justify-content: space-between; box-shadow: 0 2px 15px rgba(0,0,0,0.08); position: sticky; top: 0; z-index: 1000; font-family: 'Poppins', sans-serif;">
-    
-    <a href="index.html" style="text-decoration: none; font-size: 26px; font-weight: 700; color: #004d40;">
-        Deco<span style="color: #ff9800;">Tech</span>
-    </a>
+<body>
 
-    <div style="display: flex; gap: 20px;">
-        <a href="index.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">Home</a>
-        <a href="shop.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">Shop</a>
-        <a href="gadgets.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">Gadgets</a>
-        <a href="decor.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">Decor</a>
-        <a href="clothing.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">Clothing</a>
-        <a href="about.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">About Us</a>
-        <a href="contact.html" style="text-decoration: none; color: #333; font-weight: 500; font-size: 15px;">Contact</a>
-    </div>
-
-    <div style="position: relative; width: 250px;">
-        <input type="text" placeholder="Search products..." style="width: 100%; padding: 8px 35px 8px 15px; border-radius: 20px; border: 1px solid #ddd; outline: none; font-size: 14px;">
-        <i class="fa fa-search" style="position: absolute; right: 12px; top: 10px; color: #888;"></i>
-    </div>
-
-    <div style="display: flex; gap: 20px; align-items: center;">
-        <a href="login.html" style="color: #004d40; font-size: 20px;"><i class="fa fa-user"></i></a>
-        <div style="position: relative; cursor: pointer;">
-            <a href="cart.html" style="color: #004d40; font-size: 20px; text-decoration: none;">
+    <nav>
+        <a href="index.html" class="logo">Deco<span>Tech</span></a>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="shop.html">Shop</a>
+            <a href="gadgets.html">Gadgets</a>
+            <a href="decor.html">Decor</a>
+            <a href="clothing.html">Clothing</a>
+            <a href="about.html" style="color: var(--accent);">About Us</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div style="display: flex; gap: 15px; align-items: center;">
+            <a href="cart.html" style="color: var(--primary); font-size: 20px; position: relative; text-decoration: none;">
                 <i class="fa fa-shopping-cart"></i>
-                <span id="cartCount" style="position: absolute; top: -10px; right: -10px; background: #ff9800; color: white; font-size: 11px; padding: 2px 6px; border-radius: 50%; font-weight: bold;">0</span>
+                <span id="cartCount" style="position: absolute; top: -10px; right: -10px; background: var(--accent); color: white; font-size: 10px; padding: 2px 6px; border-radius: 50%; font-weight: bold;">0</span>
             </a>
         </div>
-    </div>
-</nav>
+    </nav>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<body style="font-family: 'Poppins', sans-serif; background: #f4f4f4; margin: 0;">
-    <div style="max-width: 800px; margin: 50px auto; background: white; padding: 40px; border-radius: 15px; text-align: center;">
-        <h1 style="color: #004d40;">Welcome to DecoTech</h1>
-        <p style="font-size: 18px; line-height: 1.8; color: #444;">
-            Founded in 2026, DecoTech started with a simple vision: to bring innovation into every home. 
-            We provide a curated selection of smart gadgets, home decor, and clothing that blend functionality with style.
-        </p>
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=600" style="width: 100%; border-radius: 10px; margin: 20px 0;">
-        <h3>Why Choose Us?</h3>
-        <p>Premium Quality | Fast Delivery | 24/7 Support</p>
+    <div class="about-hero">
+        <h1 class="reveal-top">Our Story</h1>
     </div>
-    </body>
+
+    <div class="container">
+        <div class="story-card reveal-left">
+            <div class="story-text">
+                <h2>Redefining Living Spaces</h2>
+                <p>
+                    Founded in <b>2026</b>, DecoTech emerged from a passion for blending modern technology with timeless aesthetics. We believe that your home is a reflection of your soul, and every gadget or decor piece should tell a story.
+                </p>
+                <p>
+                    From smart gadgets that simplify your life to premium clothing that expresses your personality, we curate products that meet the highest standards of quality and innovation.
+                </p>
+            </div>
+            <div class="story-img">
+                <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=600" alt="Team Work">
+            </div>
+        </div>
+
+        <div class="stats-grid">
+            <div class="stat-item reveal-item">
+                <i class="fa fa-users"></i>
+                <h3>10k+</h3>
+                <p>Happy Customers</p>
+            </div>
+            <div class="stat-item reveal-item">
+                <i class="fa fa-box-open"></i>
+                <h3>500+</h3>
+                <p>Premium Products</p>
+            </div>
+            <div class="stat-item reveal-item">
+                <i class="fa fa-globe"></i>
+                <h3>24/7</h3>
+                <p>Online Support</p>
+            </div>
+            <div class="stat-item reveal-item">
+                <i class="fa fa-truck"></i>
+                <h3>Fast</h3>
+                <p>Global Shipping</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="values-section">
+        <h2 style="font-size: 35px;">Our Core Values</h2>
+        <div class="values-grid">
+            <div class="value-card reveal-bottom">
+                <i class="fa fa-gem"></i>
+                <h3>Quality First</h3>
+                <p>We never compromise on quality. Every product is handpicked and tested for durability.</p>
+            </div>
+            <div class="value-card reveal-bottom">
+                <i class="fa fa-lightbulb"></i>
+                <h3>Innovation</h3>
+                <p>Staying ahead with the latest technology and unique designs in the lifestyle market.</p>
+            </div>
+            <div class="value-card reveal-bottom">
+                <i class="fa fa-heart"></i>
+                <h3>Customer Love</h3>
+                <p>Your satisfaction is our priority. We are here to help you before and after every purchase.</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2026 DecoTech | Crafted for Excellence</p>
+        <div style="margin-top: 10px; opacity: 0.6;">
+            <i class="fab fa-facebook mx-2"></i>
+            <i class="fab fa-instagram mx-2"></i>
+            <i class="fab fa-twitter mx-2"></i>
+        </div>
+    </footer>
+
+    <script>
+        // Animations
+        ScrollReveal().reveal('.reveal-top', { distance: '50px', duration: 1000, origin: 'top' });
+        ScrollReveal().reveal('.reveal-left', { distance: '60px', duration: 1200, origin: 'left' });
+        ScrollReveal().reveal('.reveal-item', { distance: '30px', duration: 800, origin: 'bottom', interval: 200 });
+        ScrollReveal().reveal('.reveal-bottom', { distance: '50px', duration: 1000, origin: 'bottom' });
+
+        // Cart Count Update
+        function updateCart() {
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            document.getElementById('cartCount').innerText = cart.length;
+        }
+        updateCart();
+    </script>
+</body>
 </html>
