--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <input type="text" id="mainSearch" placeholder="Search products..." onkeyup="searchProduct()">
             <i class="fa fa-search"></i>
         </div>
+        <a href="admin-login.html" style="color: #333; text-decoration: none; font-size: 12px;">Admin Login</a>
         <a href="cart.html" style="color: var(--primary); font-size: 22px; position: relative; margin-left: 25px; text-decoration: none;">
             <i class="fa fa-shopping-cart"></i>
             <span id="cartCount" style="position: absolute; top: -12px; right: -12px; background: var(--accent); color: white; font-size: 10px; padding: 2px 6px; border-radius: 50%; font-weight: bold;">0</span>
@@ -263,3 +264,4 @@
 </script>
 </body>
 </html>
+
